examples/errors/bit_not_f32/main.lc

function main() {
	const a = 1.3f;
	print(~a);
}
